Small change which should hopefully just fix a wrapping issue with the new millennials article.

--- a/core/static/css/_homepage.scss
+++ b/core/static/css/_homepage.scss
@@ -76,3 +76,9 @@
     @include subheading;
   }
 }
+
+@media(min-width: 992px) {
+  .template-home-page .feature-box img {
+    height: 195px;
+  }
+}
